Lato text browser fix, footer spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 /* General HTML stuff */
+
+@import url(http://fonts.googleapis.com/css?family=Lato:400,300,100);
+
 * {
   font-family: 'Lato';
 }
@@ -126,8 +129,8 @@ body {
   background: linear-gradient(#00F260, #0575E6);
   width: 100%;
   position: relative;
-  margin: 0 -0.7rem;
-  padding: .25rem 0.7rem;
+  margin: 0 -0.01rem;
+  padding: .25rem 0.01rem;
 }
 
 .footerContent {
